--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 
 <script>
-        var allergy_count = 0;
+        
+	// The following code lets you know when the file was last modified.
+// This will help you know if you are looking at the new version of the file or if there is a delay on GitHub.
+       var docMod = document.lastModified;
+       alert("This file last modified  " + docMod);
+       console.log("This file last modified  " + docMod);
+// If you find the alert box annoying, comment out that line and timestamp will still show up in the debugging console
+
+
+	
+	
+	var allergy_count = 0;
         var cold_count = 0;
 	//these are counters: they record how many questions were answered as "yes" for allergy or cold respectively
 	
