--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@ These functions and addresses are specified line by line in the code comments be
 <div id="content" class="w3-container"> <!-- this section introduces the purpose of the app-->
 	<p>Are you feeling like you might have a cold but wonder if it is allergies. Answer a few short questions to find out!</p>
 	
+	<img src="pregnancy.png" alt="Pregnancy vector image">
+	
 	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a> <!-- this is a button that introduces the first question by directing to page one-->
 	
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
