--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@ These functions and addresses are specified line by line in the code comments be
 	
 	
 <div id="header" class="w3-container w3-flat-carrot">
-	<h1>Cold or Allergies?</h1> <!-- this is the title (the name that expresses on the brower tab) -->
+	<h1>Are You Really Pregnant?</h1> <!-- this is the title (the name that expresses on the brower tab) -->
 </div>
 	
 <div id="content" class="w3-container"> <!-- this section introduces the purpose of the app-->
-	<p>Are you feeling like you might have a cold but wonder if it is allergies. Answer a few short questions to find out!</p>
+	<p>Are you feeling like you might be pregnant but wonder if you are just late for your period? Answer a few short questions to find out!</p>
 	
 	<img src="pregnancy.png" alt="Pregnancy vector image">
 	
