--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@ These functions and addresses are specified line by line in the code comments be
 	</div>
 	
     	<div id="content" class="w3-container">
-        <p>Are your eyes watery or itchy?</p>    
+        <p>Are you experiencing nausea?</p>    
 		<!-- below are two buttons that say yes and no, then update the allergy counter or cold counter respectively. Also, directs to page two.-->
-		<a href="#two" onclick="allergyAdd();" class="w3-btn w3-grey w3-round"> Yes </a> 
-		<a href="#two" onclick="coldAdd();" class="w3-btn w3-grey w3-round"> No </a> 
+		<a href="#two" onclick="pregnancyAdd();" class="w3-btn w3-grey w3-round"> Yes </a> 
+		<a href="#two" onclick="menstruationAdd();" class="w3-btn w3-grey w3-round"> No </a> 
     	</div>
 	
 </div>
