--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@ These functions and addresses are specified line by line in the code comments be
 	</div>
 	
 	<div id="content" class="w3-container">
-	<p>Do you have a fever?</p>    
+	<p>Is your period delayed by more than seven days?</p>    
 		<!-- below are two buttons that say yes and no, then update the allergy counter or cold counter respectively. Also, directs to page three.-->
-		<a href="#three" onclick="coldAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
-		<a href="#three" onclick="allergyAdd();" class="w3-btn w3-grey w3-round"> No </a>
+		<a href="#three" onclick="pregnancyAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
+		<a href="#three" onclick="menstruationAdd();" class="w3-btn w3-grey w3-round"> No </a>
 	</div>
 </div>	
 	
