--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@ These functions and addresses are specified line by line in the code comments be
 	</div>
 	
 	<div id="content" class="w3-container">
-	<p>Do you have a sore throat?</p>    
+	<p>Are you experiencing breast tenderness or swelling?</p>    
 		<!-- below are two buttons that say yes and no, then update the allergy counter or cold counter respectively. Also, directs to page four.-->
-		<a href="#four" onclick="coldAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
-		<a href="#four" onclick="allergyAdd();" class="w3-btn w3-grey w3-round"> No </a>
+		<a href="#four" onclick="pregnancyAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
+		<a href="#four" onclick="menstruationAdd();" class="w3-btn w3-grey w3-round"> No </a>
 	</div>
 </div>	
 	
