--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@ These functions and addresses are specified line by line in the code comments be
 	</div>
 	
 	<div id="content" class="w3-container">
-	<p>Are your symptoms seasonal or chronic?</p>  
+	<p>Have you recently undergone a major change to your lifestyle?</p>  
 		<!-- below are two buttons that say yes and no, then update the allergy counter or cold counter respectively. Also, directs to page five.-->
-		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
-		<a href="#five" onclick="coldAdd();" class="w3-btn w3-grey w3-round"> No </a>
+		<a href="#five" onclick="menstruationAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
+		<a href="#five" onclick="pregnancyAdd();" class="w3-btn w3-grey w3-round"> No </a>
 		
 		
 
