changed img source from png to web address

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ These functions and addresses are specified line by line in the code comments be
 <div id="content" class="w3-container"> <!-- this section introduces the purpose of the app-->
 	<p>Are you feeling like you might be pregnant but wonder if you are just late for your period? Answer a few short questions to find out!</p>
 	
-	<img src="pregnancy.png" alt="Pregnancy vector image">
+	<img src="https://qr.page/g/47xdxIkPqX9" alt="Pregnancy vector image">
 	
 	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a> <!-- this is a button that introduces the first question by directing to page one-->
 	
