updated Brief Description and Known Issues

--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-This program asks a series of diagnosis questions to asses a person experiencing allergy and cold symptoms. 
+This program asks a series of diagnosis questions to asses a person experiencing pregnancy or delayed menstruation symptoms. 
 By compiling yes or no responses, the code will determine how likely each of the diagnoses are in terms of percentages. 
 
 
 
 Known Issues:
-Results button was appearing on front page, not results page (resolved)
-Results would not appear upon click of "Show Results" button (resolved)
-"Show Results" button was overlapping with header section (resolved)
+image not appearing, showing alt text instead
+percentage for mentruation count not compiling accurately in results (resolved)
 
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
