updated the comments in the <body> section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ The <p> tag is used to display normal text in paragraph form.
 The "href" tag describes where the link should direct the user to. 
 In these examples, href is always directing the user to a different page within the website, as dictated by the "#(page)" that follows it.
 The onclick command is defined using Javascript. onclick causes an action to happen upon clicking the link.
-In these examples, onclick is used to add a tally to its designated counter variable, allergy or cold, which are both defined in the script code.
+In these examples, onclick is used to add a tally to its designated counter variable, pregnancy or menstruation, which are both defined in the script code.
 In the <a> tag, there is also a class defined as: class="w3-btn w3-grey w3-round". 
 This class makes the links on each page appear like clickable buttons that are grey and round.
 The text located between the front and back <a> tags are the text that the link appears as. These words represent the words on the clickable buttons. 
@@ -171,7 +171,7 @@ These functions and addresses are specified line by line in the code comments be
 	
     	<div id="content" class="w3-container">
         <p>Are you experiencing nausea?</p>    
-		<!-- below are two buttons that say yes and no, then update the allergy counter or cold counter respectively. Also, directs to page two.-->
+		<!-- below are two buttons that say yes and no, then update the pregnancy counter or menstruation counter respectively. Also, directs to page two.-->
 		<a href="#two" onclick="pregnancyAdd();" class="w3-btn w3-grey w3-round"> Yes </a> 
 		<a href="#two" onclick="menstruationAdd();" class="w3-btn w3-grey w3-round"> No </a> 
     	</div>
@@ -185,7 +185,7 @@ These functions and addresses are specified line by line in the code comments be
 	
 	<div id="content" class="w3-container">
 	<p>Is your period delayed by more than seven days?</p>    
-		<!-- below are two buttons that say yes and no, then update the allergy counter or cold counter respectively. Also, directs to page three.-->
+		<!-- below are two buttons that say yes and no, then update the pregnancy counter or menstruation counter respectively. Also, directs to page three.-->
 		<a href="#three" onclick="pregnancyAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
 		<a href="#three" onclick="menstruationAdd();" class="w3-btn w3-grey w3-round"> No </a>
 	</div>
@@ -198,7 +198,7 @@ These functions and addresses are specified line by line in the code comments be
 	
 	<div id="content" class="w3-container">
 	<p>Are you experiencing breast tenderness or swelling?</p>    
-		<!-- below are two buttons that say yes and no, then update the allergy counter or cold counter respectively. Also, directs to page four.-->
+		<!-- below are two buttons that say yes and no, then update the pregnancy counter or menstruation counter respectively. Also, directs to page four.-->
 		<a href="#four" onclick="pregnancyAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
 		<a href="#four" onclick="menstruationAdd();" class="w3-btn w3-grey w3-round"> No </a>
 	</div>
@@ -211,7 +211,7 @@ These functions and addresses are specified line by line in the code comments be
 	
 	<div id="content" class="w3-container">
 	<p>Have you recently undergone a major change to your lifestyle?</p>  
-		<!-- below are two buttons that say yes and no, then update the allergy counter or cold counter respectively. Also, directs to page five.-->
+		<!-- below are two buttons that say yes and no, then update the pregnancy counter or menstruation counter respectively. Also, directs to page five.-->
 		<a href="#five" onclick="menstruationAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
 		<a href="#five" onclick="pregnancyAdd();" class="w3-btn w3-grey w3-round"> No </a>
 		
