updated known issues comments

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@ By compiling yes or no responses, the code will determine how likely each of the
 
 
 Known Issues:
-image not appearing, showing alt text instead
-percentage for mentruation count not compiling accurately in results (resolved)
+image not appearing, showing alt text instead (resolved)
+percentage for menstruation count not compiling accurately in results (resolved)
+button appearing adjacent to image rather than above image
 
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
